# budget-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_add_transaction.py
docs/: architecture.md  file_index.md  plaid_notes.md  prompt.md  roadmap.md
src/budget_tracker/: __init__.py  categorize.py  config.py  db.py  models.py  schemas.py
src/budget_tracker/api/: main.py
src/budget_tracker/app/: __init__.py  add_transaction.py  home.py
src/budget_tracker/plaid/: __init__.py
tests/: test_api_plaid_routes.py  test_app_home.py
