[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "budget-tracker"
version = "0.1.0"
description = "A personal budget tracker app with Plaid integration"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "plotly",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "cryptography",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "pre-commit",
    "mypy",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["__pycache__", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
ignore_missing_imports = true
strict = true
disallow_any_decorated = false
disallow_subclassing_any = false

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
